# keiko-personal-assistant

./: .gitignore  Enterprise-Architektur-Analyse.md  README.md  azure.yaml  pyproject.toml  test_idea_review.sh  text.txt
app/: Ideas-Hub.md  Space-for-your-Ideas-Info.md  Space-for-your-Ideas.md  start-dev.sh  start.sh
app/backend/: Dockerfile  app.py  config.py  decorators.py  error.py  main.py  requirements.in  requirements.txt
app/backend/approaches/: approach.py  chatreadretrieveread.py  retrievethenread.py
app/backend/approaches/prompts/: ask_answer_question.prompty  chat_answer_question.prompty  chat_query_rewrite.prompty  chat_query_rewrite_tools.json  ideas_review.prompty  prompt_enhance.prompty
app/backend/core/: beta_auth.py
app/backend/ideas/: __init__.py  audit.py  clustering.py  export.py  external_api.py  models.py  permissions.py  routes.py  scheduler.py  scoring.py  search_index.py  service.py
app/backend/news/: __init__.py  models.py  routes.py  scheduler.py  service.py
app/backend/prepdocslib/: blobmanager.py  embeddings.py  searchmanager.py  textsplitter.py
app/backend/static/: index.html
app/backend/static/assets/: Ask-BabgVVNR.css  Ask-BzqVyckd.js  Ask-BzqVyckd.js.map  Ask-DlD9PkOt.css  Ask-EX9B3Urc.js  Ask-EX9B3Urc.js.map  DocUploadPage-Cit_lk-h.js  DocUploadPage-Cit_lk-h.js.map  DocUploadPage-DjNHEdKv.css  IdeaHub-B50djKR8.css  IdeaHub-D0Ga9cGi.js  IdeaHub-D0Ga9cGi.js.map  NewsDashboard-CcSIbH79.js  NewsDashboard-CcSIbH79.js.map  NewsDashboard-deywxI0q.css  NoPage-CC7cBS7g.js  NoPage-CC7cBS7g.js.map  NoPage-Z_WZvGbX.js  NoPage-Z_WZvGbX.js.map  Playground-BgX-RLPS.css  Playground-CmnNiiLv.js  Playground-CmnNiiLv.js.map  VectorSettings-1TvR8GIb.js  VectorSettings-1TvR8GIb.js.map  VectorSettings-Byg1lhrP.css  browser-ponyfill-Ccak2VIl.js  browser-ponyfill-Ccak2VIl.js.map  chunk-13-__CkDkHP.js  chunk-13-__CkDkHP.js.map  chunk-28-BmcailBo.js  chunk-28-BmcailBo.js.map  fluentui-icons-BNzCICnG.js  fluentui-react-Dbzz8a2r.js  fluentui-react-Dbzz8a2r.js.map  index-BapqnFUw.js  index-BvHZeoye.css  index-DO-zPLG9.js  index-DO-zPLG9.js.map  index-xdwh83EU.css  vendor-C7z-rhZx.js
app/frontend/: generate-favicons.js  generate-pwa-icons.js  index.html  package.json  tsconfig.json  vite.config.ts
app/frontend/public/: site.webmanifest
app/frontend/src/: authConfig.ts  index.css  index.tsx
app/frontend/src/api/: api.ts  models.ts
app/frontend/src/components/AnalysisPanel/: AgentPlan.tsx  AnalysisPanel.module.css  ThoughtProcess.tsx
app/frontend/src/components/Answer/: Answer.module.css  AnswerIcon.tsx  AnswerParser.tsx
app/frontend/src/components/BetaAuthWrapper/: BetaAuthWrapper.tsx  index.tsx
app/frontend/src/components/BetaLogin/: BetaLogin.module.css  BetaLogin.tsx  (+1 more)
app/frontend/src/i18n/: config.ts
app/frontend/src/router/: AnimatedOutlet.tsx  index.ts  routes.tsx
data/: microsoft-foundry.pdf.md5
infra/: main.bicep  main.json  main.parameters.json
infra/core/host/: container-app.bicep
infra/hooks/: postprovision.sh
particle-cloud/: Anforderung.md  particle-cloud-demo.html
scripts/: analyze_all_ideas.py  load_python_env.sh  loadtest.py  migrate_embeddings_3072.py  pptx_to_pdf.py  prepdocs.sh  seed_ideas.py
scripts/demo/: chat_demo.py
(+69 files in other folders)
